--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,59 +1,48 @@
-<nav class="navbar is-link" role="navigation" aria-label="main navigation">
+<% if flash[:notice] %>
+      <div class="notification is-success global-notification">
+        <p class="notice"><%= notice %></p>
+      </div>
+<% end %>
+<% if flash[:alert] %>
+    <div class="notification is-danger global-notification">
+      <p class="alert"><%= alert %></p>
+    </div>
+<% end %>
+
+     <nav class="navbar is-link" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <%= link_to root_path, class:"navbar-item" do %>
-          <h1 class="title is-5 has-text-white">Projekt</h1>
-      <% end  %>
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
-  </div>
-
-  <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">
-      <a class="navbar-item">
-        Home
-      </a>
-
-      <a class="navbar-item">
-        Documentation
-      </a>
-
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          More
-        </a>
-
-        <div class="navbar-dropdown">
-          <a class="navbar-item">
-            About
-          </a>
-          <a class="navbar-item">
-            Jobs
-          </a>
-          <a class="navbar-item">
-            Contact
-          </a>
-          <hr class="navbar-divider">
-          <a class="navbar-item">
-            Report an issue
-          </a>
-        </div>
+          <h1 class="title is-5 has-text-white">ProjectIt</h1>
+        <% end  %>
+      <div class="navbar-burger burger" data-target="navbar">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
     </div>
 
-    <div class="navbar-end">
-      <div class="navbar-item">
-        <div class="buttons">
-          <a class="button is-primary">
-            <strong>Sign up</strong>
-          </a>
-          <a class="button is-light">
-            Log in
-          </a>
+      <div id="navbar" class="navbar-menu">
+        <div class="navbar-end">
+          <% if user_signed_in? %>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <%= link_to 'New', '#', class: "navbar-link" %>
+            <div class="navbar-dropdown">
+              <%#= link_to 'Project', new_project_path, class:"navbar-item" %>
+              <%#= link_to 'Team', new_team_path, class:"navbar-item" %>
+            </div>
+          </div>
+          <div class="navbar-item has-dropdown is-hoverable">
+            <%= link_to 'Account', edit_user_registration_path, class: "navbar-link" %>
+            <div class="navbar-dropdown is-right">
+              <%= link_to current_user.name, edit_user_registration_path, class:"navbar-item" %>
+              <%= link_to "Log Out", destroy_user_session_path, method: :delete, class:"navbar-item" %>
+            </div>
+          </div>
+         <% else %>
+          <%= link_to "Sign In", new_user_session_path, class:"navbar-item" %>
+          <%= link_to "Sign up", new_user_registration_path, class:"navbar-item"%>
+          <% end %>
+
         </div>
-      </div>
     </div>
-  </div>
-</nav>
+  </nav>
