--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,19 +13,20 @@
  *= require_tree .
  *= require_self
  */
-
  :root {
-    --spacing-none: 0;
-    --spacing-extra-small: .25rem;
-    --spacing-small: .5rem;
-    --spacing-medium: 1rem;
-    --spacing-large: 2rem;
-    --spacing-extra-large: 4rem;
-    --spacing-extra-extra-large: 8rem;
-    --spacing-extra-extra-extra-large: 16rem;
-  }
+  --spacing-none: 0;
+  --spacing-extra-small: .25rem;
+  --spacing-small: .5rem;
+  --spacing-medium: 1rem;
+  --spacing-large: 2rem;
+  --spacing-extra-large: 4rem;
+  --spacing-extra-extra-large: 8rem;
+  --spacing-extra-extra-extra-large: 16rem;
+}
 
 @import "bulma";
+@import "actiontext.scss";
+
 
 
 /* Functional Styles: http://tachyons.io/docs/ */
@@ -183,3 +184,6 @@
 .notification:not(:last-child) {
 	margin-bottom: 0;
 }
+
+@import "teams";
+@import "projects";
