--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,7 @@
     </div>
 <% end %>
 
-     <nav class="navbar is-link" role="navigation" aria-label="main navigation">
+ <nav class="navbar is-link" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <%= link_to root_path, class:"navbar-item" do %>
           <h1 class="title is-5 has-text-white">ProjectIt</h1>
@@ -27,8 +27,8 @@
           <div class="navbar-item has-dropdown is-hoverable">
             <%= link_to 'New', '#', class: "navbar-link" %>
             <div class="navbar-dropdown">
-              <%#= link_to 'Project', new_project_path, class:"navbar-item" %>
-              <%#= link_to 'Team', new_team_path, class:"navbar-item" %>
+              <%= link_to 'Project', new_project_path, class:"navbar-item" %>
+              <%= link_to 'Team', new_team_path, class:"navbar-item" %>
             </div>
           </div>
           <div class="navbar-item has-dropdown is-hoverable">
